# taxi-demand

./: README.md  pyproject.toml
.github/workflows/: main.yml
models/: dynamic-pricing-artifact.joblib  taxi-demand-artifact.joblib
src/: config.py  data.py  data_split.py  feature_pipeline.py  feature_store.py  frontend.py  inference.py  inference_pipeline.py  main.py  model.py  paths.py  plot.py  test_stream.py  testing.py
